first part compleated after changing the cources

--- a/Course.html
+++ b/Course.html
@@ -90,7 +90,7 @@
                 <li>
                   <a href="/">Home</a>
                 </li>
-                <li class="active">
+                <li class="active ">
                   <a href="course.html">Courses</a>
                   <ul class="dropdown">
                     <li>
@@ -100,20 +100,19 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="404.html">EA (Enrolled Agent)</a>
+                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">BAT</a>
+                      <a href="bat.html">BAT</a>
                     </li>
                     <li>
-                      <a href="404.html">CAT</a>
+                      <a href="cat.html">CAT</a>
                     </li>
                     <li>
-                      <a href="404.html">ACCA IFRS</a>
+                      <a href="acca_ifrs.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
-
                 <li>
                   <a href="about.html">About</a>
                 </li>
@@ -126,14 +125,11 @@
                 <li>
                   <a href="blog.html">blog</a>
                 </li>
-
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
-
                 </li>
               </ul>
-
             </nav>
           </div>
         </div>
@@ -186,8 +182,8 @@
                       finance. Recent studies indicate that the most preferred industries for CMA USA professionals
                       are...</p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="cmausa.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -213,8 +209,8 @@
                       This course provides specialized training in specific fields, preparing individuals for successful
                       careers...</p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="cmaindia.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -240,8 +236,8 @@
                       organizations in tax matters. This credential signifies top-tier expertise in tax law, making it a
                       valuable asset for those in need of tax-related services.</p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="enrolledagent.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -267,8 +263,8 @@
                       sales, accounting, and taxation departments. Exploring key concepts is integral to understanding
                       this program, highlighting its essential features for aspiring professionals...</p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="bat.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -294,8 +290,8 @@
                       practical skills and knowledge crucial for a successful career in accounting and finance. Join
                       Prospire and embark on a journey to become a Certified Accounting Technician...</p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="cat.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -323,8 +319,8 @@
                       compliance...
                     </p>
                     <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="contact.html">Apply</a>
+                      <a href="acca_ifrs.html" class="btn btn-dark btn-sm mt-10">More Details</a>
                     </div>
                   </div>
                 </div>
@@ -340,13 +336,13 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
               <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a> </li>
+                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
                     href="#">+91 9056666275</a> </li>
 
@@ -370,51 +366,29 @@
 
           </div>
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="404.html">career</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="course.html">Courses</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">BAT </a></li>
-                <li><a href="404.html">CAT </a></li>
-                <li><a href="404.html">ACCA IFRS</a></li>
+                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
+                <li><a href="bat.html">BAT </a></li>
+                <li><a href="cat.html">CAT </a></li>
+                <li><a href="acca_ifrs.html">ACCA IFRS</a></li>
               </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Call Us Now</h5>
-              <div class="text-gray">
-                +91 9056666275 <br>
-                +91 9056666275
-              </div>
-              <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
-              <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
-                <label class="display-block" for="mce-EMAIL"></label>
-                <div class="input-group">
-                  <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control"
-                    data-height="37px" id="mce-EMAIL">
-                  <span class="input-group-btn">
-                    <button type="submit" class="btn btn-colored btn-theme-colored m-0"><i
-                        class="fa fa-paper-plane-o text-white"></i></button>
-                  </span>
-                </div>
-              </form>
             </div>
           </div>
         </div>
