--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="prospire | Education & Institution" />
+  <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
 
@@ -95,16 +95,16 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="404.html">EA (Enrolled Agent)</a>
+                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">BAT</a>
+                      <a href="bat.html">BAT</a>
                     </li>
                     <li>
-                      <a href="404.html">CAT</a>
+                      <a href="cat.html">CAT</a>
                     </li>
                     <li>
-                      <a href="404.html">ACCA IFRS</a>
+                      <a href="acca_ifrs.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -113,21 +113,12 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="404.html">career</a>
-                </li>
-                <li>
                   <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                  <a href="blog.html">blog</a>
-                </li>
-
-                <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
-
                 </li>
-
               </ul>
             </nav>
           </div>
@@ -206,7 +197,7 @@
                       class="text-theme-color-2 font-weight-700">Choose Us ?</span></h3>
                   <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6">
-                      <div class="icon-box p-0 mb-40">
+                      <div class="icon-box p-0 mb-40 ">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
                           <i class="pe-7s-scissors text-white"></i>
                         </a>
@@ -437,7 +428,8 @@
               <div class="p-40 pl-0">
                 <!-- Reservation Form Start-->
                 <form id="reservation_form" name="reservation_form" class="reservation-form" method="post" action="#">
-                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into Expert Guidance!
+                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into
+                    Expert Guidance!
                   </h3>
                   <div class="row">
                     <div class="col-sm-12">
@@ -475,8 +467,9 @@
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group mb-30">
-                        <textarea id="form_message" name="form_message" class="form-control required"  placeholder="Enter Message" rows="5" aria-required="true"></textarea>
-                      </div>  
+                        <textarea id="form_message" name="form_message" class="form-control required"
+                          placeholder="Enter Message" rows="5" aria-required="true"></textarea>
+                      </div>
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group mb-0 mt-0">
@@ -532,16 +525,16 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
               <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a> </li>
-                    <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                      href="#">+91 9056666275</a> </li>
-  
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">+91 9056666275</a> </li>
+
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
                     class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
@@ -562,51 +555,29 @@
 
           </div>
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="404.html">career</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="course.html">Courses</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6 col-md-4">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">BAT</a></li>
-                <li><a href="404.html">CAT</a></li>
-                <li><a href="404.html">ACCA IFRS</a></li>
+                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
+                <li><a href="bat.html">BAT </a></li>
+                <li><a href="cat.html">CAT </a></li>
+                <li><a href="acca_ifrs.html">ACCA IFRS</a></li>
               </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Call Us Now</h5>
-              <div class="text-gray">
-                +91 9056666275 <br>
-                +91 9056666275
-              </div>
-              <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
-              <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
-                <label class="display-block" for="mce-EMAIL"></label>
-                <div class="input-group">
-                  <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control"
-                    data-height="37px" id="mce-EMAIL">
-                  <span class="input-group-btn">
-                    <button type="submit" class="btn btn-colored btn-theme-colored m-0"><i
-                        class="fa fa-paper-plane-o text-white"></i></button>
-                  </span>
-                </div>
-              </form>
             </div>
           </div>
         </div>
